--- a/templates/index.html
+++ b/templates/index.html
@@ -376,7 +376,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🍳 스마트 냉장고 레시피 추천</h1>
+            <h1>🍳 AI 냉장고 레시피 추천</h1>
             <p>식재료 사진을 올려보세요! AI가 인식하고 맛있는 레시피를 추천해드릴게요.</p>
         </div>
 
